--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This is the repo for the CS 156b project of team Mazel Tov, Molotov. Some code will be here eventually. Or is here now. Who knows?!
+This is the repo for the CS 156b project of team Mazel Tov, Molotov. Some code will be here eventually. 
+Or is here now. Who knows?!
